--- a/css/services.css
+++ b/css/services.css
@@ -28,3 +28,13 @@ body {
     margin: 0;
     padding: 0;
 }
+
+main {
+    display: grid;
+    grid-template-columns: 1fr, 1fr;
+    gap: 20px;
+    padding: 20px;
+    width: 80%;
+    margin: 0 auto;
+}
+
