--- a/css/services.css
+++ b/css/services.css
@@ -31,10 +31,9 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: 1fr, 2fr, 2fr, 1fr;
+    grid-template-columns: (1fr, 2fr, 2fr, 1fr);
     gap: 20px;
     padding: 20px;
     width: 80%;
     margin: 0 auto;
 }
-
