--- a/css/services.css
+++ b/css/services.css
@@ -31,7 +31,7 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: (1fr, 2fr, 2fr, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
     width: 80%;
