--- a/css/services.css
+++ b/css/services.css
@@ -31,9 +31,52 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 20px;
     width: 80%;
     margin: 0 auto;
 }
+
+/* Title Styling */
+.title-container {
+    text-align: left;
+    padding-top: 100px;
+}
+
+/* Pagina titel */
+.page-title {
+    font-weight: bold;
+    color: #1d3d70;
+    border-top: 5px solid #1d3d70;
+    padding-top: 10px;
+    display: inline-block;
+}
+
+.SES-container{
+    grid-area: 2/3/1/2;
+    text-align: left;
+    padding-top: 50px;
+}
+
+.AIE-container{
+    text-align: left;
+    padding-top: 50px;
+}
+
+.HE-container{
+    text-align: left;
+    padding-top: 50px;
+}
+
+.EC-container{
+    text-align: left;
+    padding-top: 50px;
+}
+
+.page-p{
+    border-bottom: 2px solid yellow;
+    padding-bottom: 2px;
+    display: inline-block;
+}
+
