--- a/css/index.css
+++ b/css/index.css
@@ -262,3 +262,80 @@ main {
 .right-btn {
     right: -50px;
 }
+
+.popup {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5); 
+  }
+  
+  
+  .popup-content {
+    background-color: #1C3D77;
+    margin: 15% auto;
+    padding: 40px 20px;
+    width: 80%; 
+    max-width: 500px;
+    border-radius: 8px;
+    color: white;
+    text-align: center;
+  }
+
+  .popup-content > h1 {
+    display: inline;
+    font-size: 56px;
+  }
+
+  .yellow-off {
+    color: #FECD3E;
+  }
+
+  .popup-content > p {
+    font-size: 24px;
+  }
+
+  .popup-content > form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
+  .form-input {
+    height: 25px;
+    font-size: 20px;
+    color: #1C3D77;
+    outline: none;
+  }
+
+  .submit {
+    height: 40px;
+    background-color: #FECD3E;
+    color: #1C3D77;
+    border-radius: 10px;
+    border-style: none;
+    font-size: 30px;
+    font-weight: bold;
+  }
+
+  .popup-content > h1, p, input {
+    margin: 1rem 0;
+  }
+  
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
