--- a/css/services.css
+++ b/css/services.css
@@ -79,6 +79,7 @@ main {
 }
 
 .page-p{
+    padding-top: 1rem;
     border-bottom: 2px solid yellow;
     padding-bottom: 2px;
     display: inline-block;
