--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -289,6 +289,26 @@ body {
     background-color: #16345f;
 }
 
+/* Winkelwagen met counter */
+.cart-icon {
+    position: relative;
+}
+
+.cart-counter {
+    position: absolute;
+    top: 55px;
+    right: 10px;
+    background-color: red; 
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    display: none; 
+}
+.cart-counter.active {
+    display: inline; 
+}
+
 .show-all-button {
     color: #1d3d70;
     border: #1d3d70 2px solid;
