--- a/css/cart.css
+++ b/css/cart.css
@@ -112,10 +112,10 @@ body {
     color: white;
 }
 
-.checkout-title-container {
+.cart-title-container {
     grid-column: 2/3;
-    padding-top: 75px;
-    padding-bottom: 40px;
+    padding-top: 7em;
+    padding-bottom: 8em;
 }
 
 /* Pagina titel */
@@ -126,114 +126,94 @@ body {
     display: inline-block;
 }
 
-.checkout-container {
+.cart-container {
     display: grid;
-    grid-template-columns: 10% 40% 40% 10%;
+    grid-template-columns: auto 55% 25% auto;
+    gap: 2rem;
 }
 
-.billing-details {
-    grid-column: 2/3;
-}
-
-.billing-details > h2 {
-    margin-bottom: 50px;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column; /* Zet label boven input */
-    margin-bottom: 25px; /* Witruimte tussen onderdelen */
-}
-
-.extra-margin {
-    margin-bottom: 50px;
-}
-
-.form-row {
-    display: flex;
-}
-
-.form-group > label {
-    margin-bottom: 20px; /* Witruimte tussen label en input */
-    color: #1d3d70;
-    font-weight: bold;
-}
-
-.form-group > input, select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-family: 'Nexa', sans-serif;
-    font-weight: bold;
-    color: #9F9F9F;
-    height: 50px;
-    max-width: 50%;
-    background-color: white;
-}
-
-.summary {
-    display: flex;
-    flex-direction: column;
-    background-color: #1d3d70;
-    border-radius: 10px;
-    height: 62%;
-    color: white;
-    padding: 60px 2.5em;
+.cart-table {
+    grid-row-start: 2;
+    grid-column-start: 2;
 }
 
 table {
     width:100%;
     border-collapse: collapse;
+    font-weight: bold;
+    color: #9F9F9F;
 }
 
 td {
-    padding: 0.75rem;
+    padding: 1.5rem 0.75rem;
 }
 
 td:nth-child(1) {
     width: 20%;
 }
 
-td:nth-child(2) {
-    width: 50%;
+td:nth-child(2), td:nth-child(3) {
+    width: 25%;
 }
 
-td:nth-child(3) {
-    width: 20%;
-    font-weight: bold;
-    text-align: right;
+.upper-row {
+    background-color: #1d3d70;
+    color: white;  
 }
 
-.total-price {
-    color: #FECD3E;
+.first-cell {
+    border-radius: 10px 0 0 10px;
 }
 
-hr {
-    margin-block: 1.75rem;
+.last-cell {
+    border-radius: 0 10px 10px 0;
 }
 
-.radio-section > label, input {
-    margin-right: 10px;
-    vertical-align: middle;
-    font-weight: bold;
+tr:not(.upper-row) td:nth-child(4) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 160px;
 }
 
-.radio-desc {
-    color: #9F9F9F;
-    margin-block: 0.5rem;
+tr:not(.upper-row) td:nth-child(5) {
+    color: black;
 }
 
-.final-desc {
-    margin-block: 4rem;
+input {
+    max-width: 5ch;
+    padding: 5px;
+    border: 1px solid #9F9F9F;
+    border-radius: 5px;
+    text-align: center;
 }
 
-.place-order-button {
-    align-self: center;
+.cart-totals {
+    grid-row-start: 2;
+    grid-column-start: 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1d3d70;
+    color: white;
+    border-radius: 10px;
+    height: 425px;
+    padding: 2em 2.5em;
+}
+
+.totals {
+    color: white;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.checkout-button {
     text-decoration: none;
     background-color: #FECD3E;
-    border-radius: 15px;
+    border-radius: 4px;
     color: #1d3d70;
     padding: 18px 20%;
     margin-bottom: 4rem;
     font-size: 20px;
 }
+
