--- a/css/about.css
+++ b/css/about.css
@@ -27,8 +27,6 @@ body {
     color: #1C3D77;
     background: no-repeat 50% 20% url("../img/distributie_centra\ sunny_socks.png");
     background-size: 100%;
-    width: 100%;
-    height: 100%;
 }
 
 /* Topbar Styling */
@@ -117,45 +115,53 @@ body {
     color: white; /* Witte tekstkleur bij hover */
 }
 
-
-/* Pagina titel */
-.aboutus-title {
-    font-weight: bold;
-    color: #1d3d70;
-    border-top: 5px solid #1d3d70;
-    padding-top: 10px;
-    display: inline-block;
-}
-
-.intro-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 20%;
-    padding: 20px;
-    margin-left: 100px;
-    padding-bottom: 10px;
-    background-color: rgba(255, 255, 255, 80%);
-    border-radius: 10px;
-    margin-top: 300px;
-    padding: 40px;
-}
-
-
-.grid-container {
-    display: grid;
-    padding: 20px;
-}
-
-.grid-1
-
-.img {
-    border-radius: 10px;
-}
-
 hr {
 
     border-style: solid;
     border-color: #FECD3E;
     margin: auto;
     width: 75%;
+}
+
+.aboutus-title {
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: overline 5px solid #1d3d70;
+}
+
+.intro-container {
+    display: grid;
+    background-color: rgba(255, 255, 255, 80%);
+    border-radius: 10px;
+    padding: 20px;
+    margin-left: 230px;
+    margin-top: 150px;  
+    width: 80%;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin: 0 auto;
+    width: 80%;
+    margin-top: 110vh;
+}
+
+.grid-container > img {
+    border-radius: 10px;
+    margin-top: 100px;
+    outline: 4px solid #1C3D77;
+    width: 500px;
+    height: 500px;
+}
+
+.grid-item > h2 {
+    padding-bottom: 50px;
+    padding-top: 100px;
+    text-align: center;
+}
+
+.grid-item > p {
+    text-align:center;
+    width: 90%;
 }
