--- a/css/footer.css
+++ b/css/footer.css
@@ -27,33 +27,34 @@ body {
     color: #1E407A;
 }
 
-.border-top {
-    border-top: yellow;
-    border-top-width: 5px;
-}
-
 footer {
     background-color: #F9F9F9;
     padding: 40px 20px;
     color: #00266B;
 }
 
-.footer-container {
+.logo {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 1200px;
-    margin: auto;
+    max-width: min-content;
+    border-bottom: 2px solid #00266B;
+}
+
+.logo img {
+    max-height: 60px; /* Logo hoogte */
+    width: auto;
 }
 
 .footer-section h2 {
     font-size: 2em;
+    border-bottom-color: #00266B;
     margin-bottom: 20px;
 }
 
 .footer-links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     margin-top: 20px; 
     flex-wrap: wrap;
