--- a/css/about.css
+++ b/css/about.css
@@ -118,7 +118,6 @@ body {
 
 .title-wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 20px;
     width: 80%;
@@ -143,10 +142,20 @@ body {
     background-color: rgba(255, 255, 255, 80%);
     border-radius: 10px;
     padding: 20px;
-    margin-left: 230px;
-    margin-top: 150px;  
-    width: 80%;
+    margin-left: 190px;
+    width: 20%;
 }
+
+.intro-text > h2 {
+    padding-bottom: 50px;
+    padding-top: 100px;
+    text-align: center;
+}
+
+.intro-text > p {
+    text-align:center;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -183,3 +192,4 @@ body {
     text-align:center;
 
 }
+
