--- a/css/about.css
+++ b/css/about.css
@@ -27,7 +27,7 @@ body {
     color: #1C3D77;
     background: no-repeat 50% 20% url("../img/distributie_centra\ sunny_socks.png");
     background-size: contain;
-    
+    background-position: 50% 20%;    
 }
 
 /* Topbar Styling */
@@ -116,6 +116,23 @@ body {
     color: white; /* Witte tekstkleur bij hover */
 }
 
+.cart-counter {
+    position: absolute;
+    top: 55px;
+    right: 10px;
+    background-color: red; 
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    display: none; 
+}
+
+.cart-counter.active {
+    display: inline; 
+}
+
+
 .title-wrapper {
     display: grid;
     gap: 20px;
@@ -162,7 +179,7 @@ body {
     gap: 20px;
     margin: 0 auto;
     width: 80%;
-    margin-top: 130vh;
+    margin-top: 100vh;
     width: 75%;
 
 }
