--- a/css/contact.css
+++ b/css/contact.css
@@ -114,69 +114,51 @@ body {
     color: white; /* Witte tekstkleur bij hover */
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
     padding: 20px;
+    width: 80%;
+    margin: 0 auto;
 }
 
-.contact-form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: auto;
+/* Title Styling */
+.contact-container {
+    text-align: left;
+    padding-top: 100px;
 }
 
-.contact-form h1, .contact-form p {
-    text-align: center;
+/* Pagina titel */
+.contact-title {
+    font-weight: bold;
+    color: #1d3d70;
+    border-top: 5px solid #1d3d70;
+    padding-top: 10px;
+    display: inline-block;
+
+
 }
 
-.contact-form label {
-    display: block;
-    margin-top: 10px;
+.SES-container{
+    grid-area: 2/1/2/2;
+    text-align: left;
+    padding-top: 50px;
 }
 
-.contact-form input, .contact-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.AIE-container{
+    grid-area: 2/2/3/2;
+    text-align: under;
+    padding-top: 50px;
+    
+}.HE-container{
+    grid-area: 4/1/4/2;
+    text-align: left;
+    padding-top: 50px;
 }
 
-.contact-form textarea {
-    height: 100px;
-}
-
-.contact-form button {
-    background-color: #28a745;
-    color: white;
-    padding: 10px 15px;
-    margin-top: 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.contact-form button:hover {
-    background-color: #218838;
-}
-
-.contact-info {
-    margin-top: 30px;
-    text-align: center;
-}
-
-.team-member {
-    margin-top: 15px;
-}
-
-.team-member h3 {
-    margin-bottom: 5px;
-}
-
-.website {
-    margin-top: 20px;
+.EC-container{
+    grid-area: 5/2/6/3;
+    text-align: left;
+    padding-top: 50px;
 }
