--- a/css/login.css
+++ b/css/login.css
@@ -114,10 +114,26 @@ body {
     color: white; /* Witte tekstkleur bij hover */
 }
 
+.cart-counter {
+    position: absolute;
+    top: 55px;
+    right: 10px;
+    background-color: red; 
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    display: none; 
+}
+
+.cart-counter.active {
+    display: inline; 
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    margin-top: 5rem;
+    margin: 5rem 0 15rem 0;
 }
 
 h1 {
@@ -127,14 +143,13 @@ h1 {
 
 .title {
     color: #1C3D77;
-    font-size: 56px;
     border-top: 5px solid #1C3D77;
     display: inline;
     text-align: center;
     margin-left: 3rem;
 }
 
-form {
+.form-grid {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
 }
@@ -148,13 +163,13 @@ label, a {
     color: #1C3D77;
 }
 
-input, label {
+.input-field, label {
     max-width: 400px;
     margin: 10px 0;
     font-size: 16px;
 }
 
-.login-register > input {
+.submit-field > input {
     border: none;
     outline: none;
     padding: 5px 30px;
@@ -195,6 +210,12 @@ input, label {
     flex-direction: column;
     justify-content: center;
 }
+
+.error-message {
+    color: red;
+}
+
+
 
 
 
