--- a/css/about.css
+++ b/css/about.css
@@ -25,9 +25,9 @@
 body {
     font-family: 'Nexa', sans-serif; /* Nexa lettertype */
     color: #1C3D77;
-    background: no-repeat 50% 20% url("../img/distributie_centra\ sunny_socks.png");
-    background-size: contain;
-    background-position: 50% 20%;    
+    background: no-repeat url("../img/distributie_centra\ sunny_socks.png");
+    background-size: 100%, auto;
+    background-position: center 300px; 
 }
 
 /* Topbar Styling */
@@ -147,12 +147,6 @@ body {
     font-weight: 300;
     font-style: normal;
     color: #1E407A;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -302,7 +296,6 @@ form button:hover {
 
 .intro-text > h2 {
     padding-bottom: 50px;
-    padding-top: 100px;
     text-align: center;
 }
 
@@ -316,8 +309,9 @@ form button:hover {
     gap: 20px;
     margin: 0 auto;
     width: 80%;
-    margin-top: 100vh;
+    margin-top: 500px;
     width: 75%;
+    padding-top: 150px;
 
 }
 
@@ -344,8 +338,8 @@ form button:hover {
 
 .grid-item > p {
     text-align:center;
-    max-width: 50%; /* Limit the width to make the text narrow */
-    margin: 0 auto; /* Center the text block */
+    max-width: 50%;
+    margin: 0 auto;
     text-align: center; 
 
 }
@@ -357,5 +351,3 @@ form button:hover {
     padding-right: 200px;
 }
 
-
-    
