--- a/css/about.css
+++ b/css/about.css
@@ -97,16 +97,16 @@ body {
 }
 
 .grid-item > h2 {
+    display: grid;
     padding-bottom: 50px;
     padding-top: 100px;
     text-align: center;
 }
 
 .grid-item > p {
-    text-align:center;
+    text-align: center;
     max-width: 50%;
     margin: 0 auto;
-    text-align: center; 
 
 }
 
@@ -121,4 +121,5 @@ body {
     margin-right: 50px;
     margin-bottom: 50px;
 }
+
 
