--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -26,7 +26,7 @@ body {
     font-family: 'Nexa', sans-serif;
     margin: 0;
     padding: 0;
-    color: #1d3d70; /* Consistente tekstkleur */
+    color: #1d3d70; 
 }
 
 /* Topbar Styling */
