Centreren fotos + tekst

--- a/css/about.css
+++ b/css/about.css
@@ -30,6 +30,7 @@ body {
     background-position: center 300px; 
 }
 
+/*Title section*/
 .title-wrapper {
     display: grid;
     gap: 20px;
@@ -44,6 +45,7 @@ body {
     margin-right: 200px;
     
 }
+
 .aboutus-title {
     font-weight: bold;
     border-top: 5px solid #1d3d70;
@@ -51,36 +53,42 @@ body {
     display: inline-block;
 }
 
+/* Layout for the introductory text */
 .intro-container {
     display: grid;
     background-color: rgba(255, 255, 255, 80%);
     border-radius: 10px;
-    padding: 20px;
+    padding: 40px;
     margin-left: 190px;
     width: 20%;
 }
 
+/*Styling for the headings within the introduction container*/
 .intro-text > h2 {
-    padding-bottom: 50px;
+    display: grid;
+    text-align: center;
+    display: inline-block;
+}
+
+/*Styling for the paragraphs within the introduction container*/
+.intro-text > p {
+    display: grid;
     text-align: center;
 }
 
-.intro-text > p {
-    text-align:center;
-}
-
+/*Main layout*/
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 0 auto;
-    width: 80%;
-    margin-top: 500px;
     width: 75%;
+    margin-top: 400px;
     padding-top: 150px;
-
+    padding-bottom: 100px;
 }
 
+/*Styling for the horizontal line across the page*/
 .grid-container > hr {
     grid-column: 1 / -1;
     border-style: solid;
@@ -90,12 +98,16 @@ body {
     margin-top: 100px;
 }
 
+/* Styling for images within the grid*/
 .grid-container > img {
     border-radius: 10px;
     margin-top: 100px;
     outline: 4px solid #1C3D77;
+    justify-self: center;
+    text-align: center; /* Ensures text content is centered as well */
 }
 
+/*Items within grid, specifically styling the headings*/
 .grid-item > h2 {
     display: grid;
     padding-bottom: 50px;
@@ -103,23 +115,10 @@ body {
     text-align: center;
 }
 
+/* Items within grid, specifically styling the paragraphs*/
 .grid-item > p {
     text-align: center;
-    max-width: 50%;
+    max-width: 50%; 
     margin: 0 auto;
-
 }
-
-.flex-chat {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.flex-chat > img {
-    width: 100px;
-    height: 100px;
-    margin-right: 50px;
-    margin-bottom: 50px;
-}
-
 
