--- a/css/cart.css
+++ b/css/cart.css
@@ -112,6 +112,22 @@ body {
     color: white;
 }
 
+.cart-counter {
+    position: absolute;
+    top: 55px;
+    right: 10px;
+    background-color: red; 
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    display: none; 
+}
+
+.cart-counter.active {
+    display: inline; 
+}
+
 .cart-title-container {
     grid-column: 2/3;
     padding-top: 7em;
@@ -180,7 +196,7 @@ tr:not(.upper-row) td:nth-child(5) {
     color: black;
 }
 
-input {
+td > input {
     max-width: 5ch;
     padding: 5px;
     border: 1px solid #9F9F9F;
